       the same repository. See issue #132. (Stefan)
- NEW: Checking/Unchecking multiple items at once: select multiple files and
       checking/unchecking one of them unchecks/checks all of them.
       See issue 118. (Stefan)
- NEW: The Spellchecker ignores now numbers and doesn't mark them
       as missspelled anymore. See issue #145. (Stefan)
- CHG: The spellchecker now checks text pasted in the edit control
       immediately, without the need to enter text manually first.
       See issue #116. (Stefan)
- CHG: In the log dialog, the "next 100" button is disabled once the
       "Show All" button was pressed. See issue #138. (Stefan)
- CHG: Enabled diffing of copied/moved files in the commit dialog. (Stefan)
- BUG: The default ssh client (TortoisePlink) wasn't used in some
       places, e.g. the revision graph. (Stefan)
- BUG: The option "Only use spellchecker when tsvn:projectlanguage is set"
       was inversed. (Stefan)
- BUG: The bugtraq: and tsvn: property values weren't correctly handled if
       they contained non-ASCII chars. (Stefan)
- BUG: Comparing two files from the revision graph didn't work. (Stefan)
- BUG: When adding a folder, nested folders were shown as unversioned
       and checked to add. (Stefan)
- BUG: The same line was shown twice in TortoiseMerge if 'ignore leading
       whitespace' option was turned on and the line differed only
       in whitespaces. See issue #121. (Stefan)
- BUG: UNICODE chars weren't shown correctly in the log message
       middle view. (Stefan)
- BUG: The spell checker codepage was ignored but the local codepage
       was used instead. This lead to problems e.g. with the russian
       spell check dictionary. (Stefan)
- BUG: Manual edits of URLs in the repository browser weren't reflected
       if the repobrowser was used to find URLs from other dialogs.
       See issue #139. (Stefan)
- BUG: In the log dialog, 'Compare Revisions' didn't work if the log dialog